[workspace]
resolver = "2"
members = [
    "ids",
    "derive",
    "transparent",
    "table_seq",
    "imctk",
    "logger",
    "util",
    "ir",
    "abc-sys",
    "abc",

    # comment to force multi-line layout
]

[profile.release.package.imctk-abc-sys]
debug = false # TODO check how the cc crate turns this into compiler flags

[profile.release]
debug = true

[profile.dev]
opt-level = 1
