[workspace]
resolver = "2"
members = [
    "ids",
    "derive",
    "transparent",
    "table_seq",
    "aiger",
    "logger",
    "util",
    "ir",
    "abc-sys",
    "abc",
    "eqy-engine",
    "inc_refine",
    "extract",

    # comment to force multi-line layout
]

[profile.release]
debug = true

[profile.dev]
opt-level = 1
