[workspace]
resolver = "2"
members = [
    "ids",
    "derive",
    "transparent",
    "table_seq",
    "aiger",
    "logger",
    "util",
    "ir",
    "abc-sys",
    "abc",
    "eqy-engine",
    "inc_refine",
    "extract",
    "imctk",
    "lit",
    "stable_set",
    "union_find",

    # comment to force multi-line layout
]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"

[profile.release]
debug = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
