[package]
name = "imctk-aiger"
version = "0.1.0"
edition = "2021"

publish = false

[lints]
workspace = true

[dependencies]
flussab = "0.3.1"
flussab-aiger = "0.1.0"
hashbrown = { version = "0.14.5", default-features = false, features = [
    "inline-more",
] }
imctk-derive = { version = "0.1.0", path = "../derive" }
imctk-ids = { path = "../ids" }
imctk-ir = { version = "0.1.0", path = "../ir" }
imctk-transparent = { version = "0.1.0", path = "../transparent" }
imctk-util = { version = "0.1.0", path = "../util" }
log = "0.4.21"
table_seq = { version = "0.1.0", path = "../table_seq" }
zwohash = "0.1.2"

[dev-dependencies]
clap = { version = "4.5.7", features = ["derive"] }
indicatif = "0.17.8"
imctk-logger = { path = "../logger" }
