[package]
name = "imctk-derive"
version = "0.1.0"
edition = "2021"

publish = false

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
imctk_codegen = { version = "0.1.0", path = "../codegen" }
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.81"
quote = { version = "1.0.36" }
syn = { version = "2.0.60" }
