[package]
name = "imctk-ids"
version = "0.1.0"
edition = "2021"

publish = false

[lints]
workspace = true

[dependencies]
hashbrown = { version = "0.14.5", default-features = false, features = ["inline-more"] }
imctk-derive = { path = "../derive" }
imctk-transparent = { path = "../transparent" }
zwohash = "0.1.2"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
