[package]
name = "imctk-ir"
version = "0.1.0"
edition = "2021"

publish = false

[lints]
workspace = true

[dependencies]
flussab-aiger = "0.1.0"
hashbrown = { version = "0.14.5", default-features = false, features = [
    "inline-more",
] }
imctk-derive = { version = "0.1.0", path = "../derive" }
imctk-ids = { path = "../ids" }
imctk-transparent = { version = "0.1.0", path = "../transparent" }
imctk-util = { version = "0.1.0", path = "../util" }
log = "0.4.21"
table_seq = { version = "0.1.0", path = "../table_seq" }
zwohash = "0.1.2"
