[package]
name = "imctk_new_ir"
version = "0.1.0"
edition = "2021"

[dependencies]
flussab-aiger = "0.1.1"
imctk-abc = { version = "0.1.0", path = "../abc" }
imctk-ids = { version = "0.1.0", path = "../ids" }
imctk-lit = { version = "0.1.0", path = "../lit" }
imctk-paged_storage = { version = "0.1.0", path = "../paged_storage" }
imctk-util = { version = "0.1.0", path = "../util" }
imctk_union_find = { version = "0.1.0", path = "../union_find" }
strum = "0.26.3"
strum_macros = "0.26.4"

[lints]
workspace = true
